# sec-rag

./: .env.example  .gitignore  Eliza AI Assessment .txt  README.md  docker-compose.yml  eval.md  package-lock.json  package.json  pyproject.toml  test_decomposer.py
backend/: api.py  config.py  db.py  evaluate.py
edgar_corpus/: AAPL_10K_2022Q3_2022-10-28_full.txt  AAPL_10K_2023Q3_2023-11-03_full.txt  AAPL_10K_2024Q3_2024-11-01_full.txt  AAPL_10K_2025-10-31_full.txt  AAPL_10Q_2022Q1_2022-04-29_full.txt  AAPL_10Q_2022Q2_2022-07-29_full.txt  AAPL_10Q_2022Q4_2023-02-03_full.txt  AAPL_10Q_2023Q2_2023-05-05_full.txt  AAPL_10Q_2023Q3_2023-08-04_full.txt  AAPL_10Q_2023Q4_2024-02-02_full.txt  AAPL_10Q_2024Q1_2024-05-03_full.txt  AAPL_10Q_2024Q2_2024-08-02_full.txt  AAPL_10Q_2024Q4_2025-01-31_full.txt  AAPL_10Q_2025Q1_2025-05-02_full.txt  AAPL_10Q_2025Q2_2025-08-01_full.txt  AAPL_10Q_2025Q4_2026-01-30_full.txt  ABBV_10K_2025-02-14_full.txt  ADBE_10K_2026-01-15_full.txt  AMD_10K_2026-02-04_full.txt  AMZN_10K_2022Q4_2023-02-03_full.txt  AMZN_10K_2023Q4_2024-02-02_full.txt  AMZN_10K_2024Q4_2025-02-07_full.txt  AMZN_10K_2026-02-06_full.txt  AMZN_10Q_2022Q1_2022-04-29_full.txt  AMZN_10Q_2022Q2_2022-07-29_full.txt  AMZN_10Q_2022Q3_2022-10-28_full.txt  AMZN_10Q_2023Q1_2023-04-28_full.txt  AMZN_10Q_2023Q2_2023-08-04_full.txt  AMZN_10Q_2023Q3_2023-10-27_full.txt  AMZN_10Q_2024Q1_2024-05-01_full.txt  AMZN_10Q_2024Q2_2024-08-02_full.txt  AMZN_10Q_2024Q3_2024-11-01_full.txt  AMZN_10Q_2025Q1_2025-05-02_full.txt  AMZN_10Q_2025Q2_2025-08-01_full.txt  AMZN_10Q_2025Q3_2025-10-31_full.txt  (+212 more)
(+21 files in other folders)
